--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 	</head>
 
 
-	<body style="margin: 0px; height: 100%; width: 100%; padding: 5%;">
+	<body>
+	<row style="display: flex; padding: 3%;">
+		<column style="flex:50%" style="padding: 3%; 
+		font-family: 'Times New Roman'; font-weight: 500; 
+		font-size: 40px; height: 500px; overflow: auto;">
+		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		font-size: 40px; margin: 0;">
+		Lucky You Studios is a Berlin based collective dedicated to fostering community and exploring interdependencies. They have been cooking and coevolving since 2020. 	
+		</p>	
+		</column>
 
-	<header>Lucky You Studios </header>
+		<column style="flex:50%" style="padding: 3%; 
+		font-family: 'Times New Roman'; font-weight: 500; 
+		font-size: 30px; height: 500px; overflow: auto;">
+		<img src="imgs/1.jpg" width="100%;">
+		<img src="imgs/2.jpg" width="100%;">
 
+
+		</column>
+
+	
+	</row>
+	
 	</body>
 
 </html>
