--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
 		font-size: 40px; height: 500px; overflow: auto;">
 		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
 		font-size: 40px; margin: 0;">
-		Lucky You Studios is a Berlin based collective dedicated to fostering community and exploring interdependencies. They have been cooking and coevolving since 2020. 	
-		</p>	
+		Lucky You is an artistic collective crafting artful eating experiences to share. Through interactive pop-up meals, catered events and edible installations, we explore collective joy and big feelings in small bites.
+		</p>
+		<br>
+		<br>
+		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		font-size: 40px; margin: 0;">
+		More to come soon...
+		<br>
+		<br>
+		INSTAGRAM <a href="https://www.instagram.com/luckyyouberlin/">@LUCKYYOU_BERLIN</a>
+
+		EMAIL <a href="mailto: luckyyouberlin@gmail.com">@LUCKYYOU_BERLIN</a>
+		</p>
+
 		</column>
 
 		<column style="flex:50%" style="padding: 3%; 
 		font-family: 'Times New Roman'; font-weight: 500; 
 		font-size: 30px; height: 500px; overflow: auto;">
 		<img src="imgs/1.jpg" width="100%;">
-		<img src="imgs/2.jpg" width="100%;">
-
 
 		</column>
 
