--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		More to come soon...
 		<br>
 		<br>
-		INSTAGRAM <a href="https://www.instagram.com/luckyyouberlin/">@LUCKYYOU_BERLIN</a>
+		Instagram: <a href="https://www.instagram.com/luckyyouberlin/">@luckyyouberlin</a>
 
-		EMAIL <a href="mailto: luckyyouberlin@gmail.com">@LUCKYYOU_BERLIN</a>
+		Email: <a href="mailto: luckyyouberlin@gmail.com">luckyyouberlin@gmail.com</a>
 		</p>
 
 		</column>
