--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 		More to come soon...
 		<br>
 		<br>
+		<p>
+		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		font-size: 20px; margin: 0;">
 		Instagram: <a href="https://www.instagram.com/luckyyouberlin/">@luckyyouberlin</a>
-
+		<br>
 		Email: <a href="mailto: luckyyouberlin@gmail.com">luckyyouberlin@gmail.com</a>
 		</p>
 
