--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		<p>
 		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
 		font-size: 20px; margin: 0;">
-		Instagram: <a href="https://www.instagram.com/luckyyouberlin/">@luckyyouberlin</a>
+		Instagram: <a href="https://www.instagram.com/luckyyoustudios/">@luckyyoustudios</a>
 		<br>
-		Email: <a href="mailto: luckyyouberlin@gmail.com">luckyyouberlin@gmail.com</a>
+		Email: <a href="mailto: luckyyoustudiosberlin@gmail.com">luckyyoustudios@gmail.com</a>
 		</p>
 
 		</column>
