--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
 			    right: 35%;
 			    width: 20%;">
 
+			<img src="imgs/4.jpg", id="six" style="display: none; position: absolute;  
+				top: 40%;
+			    right: 30%;
+			    width: 20%;">
+
+
+			<img src="imgs/5.jpg", id="eight" style="display: none; position: absolute;  
+				top: 20%;
+			    right: 5%;
+			    width: 20%;">
+
+
+			<img src="imgs/6.jpg", id="ten" style="display: none; position: absolute;  
+				top: 5%;
+			    right: 30%;
+			    width: 15%;">
+
 		</column>
 
 	
@@ -69,6 +86,26 @@
      	  const demoId = document.querySelector('#four_seconds');
      	  demoId.style.display='inline'
          }, 4000)
+
+     setTimeout(function(){
+     	  const demoId = document.querySelector('#four_seconds');
+     	  demoId.style.display='inline'
+         }, 4000)
+
+     setTimeout(function(){
+     	  const demoId = document.querySelector('#six');
+     	  demoId.style.display='inline'
+         }, 6000)
+
+     setTimeout(function(){
+     	  const demoId = document.querySelector('#eight');
+     	  demoId.style.display='inline'
+         }, 8000)
+
+     setTimeout(function(){
+     	  const demoId = document.querySelector('#ten');
+     	  demoId.style.display='inline'
+         }, 10000)
 
 	 </script>
 
