--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</p>
 		<br>
 		<br>
-		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		<p style="width: 80%; font-weight: 500; 
 		font-size: 40px; margin: 0;">
 		More to come soon...
 		<br>
