--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<body>
 	<row style="display: flex; padding: 3%;">
 		<column style="flex:50%" style="padding: 3%; 
-		font-family: 'Times New Roman'; font-weight: 500; 
+		font-weight: 500; 
 		font-size: 40px; height: 500px; overflow: auto;">
-		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		<p style="width: 80%; font-weight: 500; 
 		font-size: 40px; margin: 0;">
 		Lucky You is an artistic collective crafting artful eating experiences to share. Through interactive pop-up meals, catered events and edible installations, we explore collective joy and big feelings in small bites.
 		</p>
@@ -29,7 +29,7 @@
 		<br>
 		<br>
 		<p>
-		<p style="width: 80%; font-family: 'Times New Roman'; font-weight: 500; 
+		<p style="width: 80%; font-weight: 500; 
 		font-size: 20px; margin: 0;">
 		Instagram: <a href="https://www.instagram.com/luckyyoustudios/">@luckyyoustudios</a>
 		<br>
@@ -38,8 +38,7 @@
 
 		</column>
 
-		<column style="flex:50%" style="padding: 3%; 
-		font-family: 'Times New Roman'; font-weight: 500; 
+		<column style="flex:50%" style="padding: 3%; font-weight: 500; 
 		font-size: 30px; height: 500px; position: relative;">
 		
 			<img src="imgs/1.jpg" width="100%;">
