--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     </body>
-    <footer style="padding: 5%; text-align: center;">
+    <footer style="padding-top: 2.5%; padding-bottom: 2.5%; text-align: center;">
         Interested in working together and joining our community? <br><a href="mailto:hello@luckyyoustudios.com">Email us</a> anytime or find us on <a href="www.instagram.com/luckyyoustudios.com"> instagram </a> 
     </footer>
     <script src="script.js"></script>
