--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LYS</title>
+        <title>Lucky You Studios</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
@@ -54,7 +54,7 @@
 
     </body>
     <footer style="padding-top: 2.5%; padding-bottom: 2.5%; text-align: center;">
-        Interested in working together and joining our community? <br><a href="mailto:hello@luckyyoustudios.com">Email us</a> anytime or find us on <a href="www.instagram.com/luckyyoustudios.com"> instagram </a> 
+        Interested in working together and joining our community? <br><a href="mailto:hello@luckyyoustudios.com">Email us</a> anytime or find us on <a href="https://www.instagram.com/luckyyoustudios/"> instagram </a> 
     </footer>
     <script src="script.js"></script>
 
