--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </body>
     <footer style="padding-top: 2.5%; padding-bottom: 2.5%; text-align: center;">
-        Interested in working together and joining our community? <br><a href="mailto:hello@luckyyoustudios.com">Email us</a> anytime or find us on <a href="https://www.instagram.com/luckyyoustudios/"> instagram </a> 
+        Interested in working together and joining our community? <br> <a style= "color: black" href="mailto:hello@luckyyoustudios.com">Email us</a> anytime or find us on <a style= "color: black" href="https://www.instagram.com/luckyyoustudios/"> instagram </a> 
     </footer>
     <script src="script.js"></script>
 
